bug corrections on mobile

--- a/src/Sections/Skills/Skills.scss
+++ b/src/Sections/Skills/Skills.scss
@@ -23,6 +23,8 @@
     text-align: center;
 }
 .skill-items {
+    width: 100%;
+    justify-content: center;
     list-style: none;
     padding: 0;
     margin: 0;
